refactor(#11): presentation module 템플릿 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TodayFortune"
         tools:targetApi="31">
+        <activity android:name="com.takseha.presentation.MainHomeActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
